--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,7 @@ node_modules/
 
 # OS or Editor folders
 .DS_Store
-Thumbs.db
+Thumbs.dbe
 .cache
 .project
 .settings
@@ -27,3 +27,4 @@ nbproject
 .komodotools
 _notes
 dwsync.xml
+package-lock.json
